# circt-rs

./: .gitmodules  Cargo.toml  License-MIT.md  README.md  cpp_wrapper.hpp  rustfmt.toml
.config/: nextest.toml
capi/: firrtl.cpp  firrtl.h
circt/: Cargo.toml  rustfmt.toml
circt-sys/: Cargo.toml  build.rs  build_circt.sh  cxx_wrapper.hpp  wrapper.cpp  wrapper.h
circt-sys/src/: lib.rs
circt/src/: builtin.rs  cf.rs  comb.rs  error.rs  esi.rs  firrtl.rs  fsm.rs  func.rs  hw.rs  lib.rs  macros.rs  seq.rs  sv.rs  wrap_raw.rs
circt/src/hw/: attr.rs  mod.rs  module.rs  ops.rs  structure.rs  ty.rs
circt/src/mlir/: attr.rs  block.rs  builder.rs  context.rs  dialect.rs  loc.rs  location.rs  mod.rs  module.rs  operation.rs  pass_manager.rs  passes.rs  string.rs  symbol.rs  transforms.rs  ty.rs  value.rs
src/: api.rs
