
[workspace]

members = [
    "circt-sys",
    "circt",
]


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 8
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
# panic = 'unwind'
incremental = false
codegen-units = 4
rpath = false
