[package]
name = "circt-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
doctest = true

[dependencies]
autocxx = "0.24.0"
cxx = { version = "1.0.90", features = ["c++17"] }
libc = "0.2"
miette = { version = "5.5.0", features = ["fancy"] }

[build-dependencies]
autocxx-build = "0.24.0"
bindgen = "0.63"
cargo-emit = "0.2"
cc = "1.0"
cmake = "0.1"
cxx = { version = "1.0.90", features = ["c++17"] }
glob = "0.3"
miette = { version = "5.5.0", features = ["fancy"] }
num_cpus = "1.15"
pkg-config = "0.3"

[features]
