[package]
name = "circt-sys"
version = "0.0.1"
authors = [
    "Kamyar Mohajerani <kammoh@gmail.com>",
    "Fabian Schuiki <fschuiki@iis.ee.ethz.ch>",
]
description = "Rust bindings for CIRCT"
license = "Apache-2.0 OR MIT"
edition = "2021"

[lib]
doctest = true

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.63"
cargo-emit = "0.2"
cc = "1.0"
cmake = "0.1"
miette = { version = "5.5.0", features = ["fancy"] }
num_cpus = "1.15"
pkg-config = "0.3"

[features]
