[package]
name = "circt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.42.0"
circt-sys = {path = "../circt-sys"}
itertools = "0.10.5"
lazy_static = "1.4.0"
num = { version = "0.4.0", features = ["num-bigint"] }
paste = "1.0.11"
quote = "1.0.23"
readonly = "0.2.3"
simple-error = "0.2.3"
thiserror = "1.0.38"
