[package]
name = "circt"
version = "0.0.1"
authors = [
    "Kamyar Mohajerani <kammoh@gmail.com>",
    "Fabian Schuiki <fschuiki@iis.ee.ethz.ch>",
]
description = "Rust API for CIRCT"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
cached = "0.42.0"
circt-sys = { path = "../circt-sys" }
itertools = "0.10.5"
lazy_static = "1.4.0"
miette = { version = "5.5.0", features = ["fancy"] }
num = { version = "0.4.0", features = ["num-bigint"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
paste = "1.0.11"
quote = "1.0.23"
simple-error = "0.2.3"
thiserror = "1.0.38"

[features]
